# arrow-adbc

c/: CMakeLists.txt
c/cmake_modules/: DefineOptions.cmake
c/driver/hologres/: AdbcDriverHologresConfig.cmake.in  CMakeLists.txt  README.md  adbc-driver-hologres.pc.in  arrow_copy_reader.cc  arrow_copy_reader.h  arrow_copy_reader_test.cc  bind_stream.h  bind_stream_test.cc  connection.cc  connection.h  connection_test.cc  copy_test.cc  copy_writer_test.cc  database.cc  database.h  database_test.cc  error.h  error_test.cc  hologres.cc  postgres_type_test.cc  postgres_util.h  postgres_util_test.cc  result_helper.cc  result_helper.h  result_helper_test.cc  stage_connection.cc  stage_connection.h  stage_writer.cc  stage_writer.h  stage_writer_test.cc  statement.cc  statement.h  statement_test.cc  test_util.h
c/driver/hologres/copy/: reader.h  writer.h
c/include/arrow-adbc/driver/: hologres.h
python/adbc_driver_hologres/: MANIFEST.in  README.md  asv.conf.json  pyproject.toml  setup.py
python/adbc_driver_hologres/adbc_driver_hologres/: __init__.py  _version.py  dbapi.py
python/adbc_driver_hologres/benchmarks/: benchmarks.py
python/adbc_driver_hologres/tests/: conftest.py  test_dbapi.py  test_lowlevel.py
